<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Main view -->
    <string name="error_message">Generic error</string>
    <string name="error_msg_no_network">Network is not available</string>
    <string name="error_msg_no_data">No data available</string>

    <string name="action_settings">Settings</string>

    <!-- Detail view -->
    <string name="detail_vote_average">Vote Average</string>
    <string name="detail_release_date">Release Date</string>
    <string name="detail_video_trailers">Video Trailers</string>
    <string name="detail_movie_reviews">Movie Reviews</string>

    <!-- Preferences -->
    <string name="pref_sort_order_title">Sort Order</string>
    <string name="pref_sort_order_dialog">Select Sort Order</string>
    <string name="pref_sort_order_most_popular">Most Popular</string>
    <string name="pref_sort_order_top_rated">Top Rated</string>
    <string name="pref_sort_order_favorite">Favorite Only</string>

    <!-- Content descriptors -->
    <string name="desc_movie_poster">Movie poster</string>
    <string name="desc_play_arrow">Play arrow</string>

    <!-- Content authority -->
    <string name="content_authority">cz.jtek.popularmovies</string>

</resources>
